<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.6</version>
    <relativePath /> <!-- lookup parent from repository -->
  </parent>
  <groupId>ch.puzzle</groupId>
  <artifactId>pcts</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>demo</name>
  <description>demo</description>

  <properties>
    <java.version>21</java.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
				<dependency>
					 <groupId>org.postgresql</groupId>
					 <artifactId>postgresql</artifactId>
					 <scope>runtime</scope>
				</dependency>
				<dependency>
					 <groupId>org.springframework.boot</groupId>
					 <artifactId>spring-boot-starter-data-jpa</artifactId>
				</dependency>
				<dependency>
					 <groupId>org.flywaydb</groupId>
					 <artifactId>flyway-core</artifactId>
					 <version>11.13.2</version>
				</dependency>
				<dependency>
					 <groupId>org.flywaydb</groupId>
					 <artifactId>flyway-database-postgresql</artifactId>
					 <version>11.13.2</version>
					 <scope>runtime</scope>
				</dependency>
    <dependency>
					 <groupId>org.springdoc</groupId>
					 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
					 <version>2.8.13</version>
				</dependency>

      <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>junit-jupiter</artifactId>
          <version>1.21.3</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>postgresql</artifactId>
          <version>1.21.3</version>
          <scope>test</scope>
      </dependency>

    <!-- Dev Tools   -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.13.2</version>
          <scope>test</scope>
      </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>code-format</id>
            <goals>
              <goal>apply</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <java>
            <eclipse>
              <version>4.26</version>
              <file>${project.basedir}/src/main/resources/formatting.xml</file>
            </eclipse>
            <removeUnusedImports />
            <importOrder />
          </java>
        </configuration>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>3.5.4</version>
            <configuration>
                <excludes></excludes>
            </configuration>
            <executions>
                <execution>
                    <goals>
                        <goal>integration-test</goal>
                        <goal>verify</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.5.4</version>
      </plugin>
					 <plugin>
						  <groupId>org.cyclonedx</groupId>
						  <artifactId>cyclonedx-maven-plugin</artifactId>
						  <version>2.9.1</version>
						  <configuration>
							   <schemaVersion>1.6</schemaVersion>
						  </configuration>
					</plugin>
					<plugin>
						 <groupId>org.sonarsource.scanner.maven</groupId>
						 <artifactId>sonar-maven-plugin</artifactId>
							<version>5.2.0.4988</version>
					</plugin>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.13</version>
						<configuration>
							<excludes>
								<exclude>ch/puzzle/pcts/model/**</exclude>
								<exclude>ch/puzzle/pcts/dto/**</exclude>
								<exclude>ch/puzzle/pcts/exception/**</exclude>
								<exclude>ch/puzzle/pcts/PctsApplication.java</exclude>
								<exclude>ch/puzzle/pcts/SpringSecurityConfig.java</exclude>
							</excludes>
						</configuration>
						<executions>
							<execution>
								<id>before-unit-test-execution</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<destFile>${project.build.directory}/jacoco-output/jacoco-unit-tests.exec</destFile>
								</configuration>
							</execution>

							<execution>
								<id>before-integration-test-execution</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<destFile>${project.build.directory}/jacoco-output/jacoco-integration-tests.exec</destFile>
								</configuration>
							</execution>

							<execution>
								<id>merge-unit-and-integration</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>merge</goal>
								</goals>
								<configuration>
									<fileSets>
										<fileSet>
											<directory>${project.build.directory}/jacoco-output/</directory>
											<includes>
												<include>*.exec</include>
											</includes>
										</fileSet>
									</fileSets>
									<destFile>${project.build.directory}/jacoco-output/merged.exec</destFile>
								</configuration>
							</execution>

							<execution>
								<id>create-merged-report</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<dataFile>${project.build.directory}/jacoco-output/merged.exec</dataFile>
									<outputDirectory>${project.reporting.outputDirectory}/jacoco-merged-test-coverage-report
									</outputDirectory>
								</configuration>
							</execution>

							<execution>
								<id>check</id>
								<phase>verify</phase>
								<goals>
									<goal>check</goal>
								</goals>
								<configuration>
									<rules>
										<rule>
											<element>BUNDLE</element>
											<limits>
												<limit>
													<counter>INSTRUCTION</counter>
													<value>COVEREDRATIO</value>
													<minimum>0.80</minimum>
												</limit>
											</limits>
											<limits>
												<limit>
													<counter>BRANCH</counter>
													<value>COVEREDRATIO</value>
													<minimum>0.8</minimum>
												</limit>
											</limits>
										</rule>
									</rules>
									<dataFile>${project.build.directory}/jacoco-output/merged.exec</dataFile>
								</configuration>
							</execution>
						</executions>
					</plugin>
    </plugins>
  </build>

</project>
